--- a/index.html
+++ b/index.html
@@ -48,27 +48,31 @@
 
     <!---------- details of game ------------------->
 
-    <!-- aside navigation section -->
-    <section class="nav-go-live">
+    <!-- aside navigation and go-live section -->
+    <section class="second-base-bg">
 
-        <aside>
-            <nav>
-                <ul class="side-nav">
-                    <form action="">
-                        <li class="match"> <a href="match.html">Upcoming Match</a></li>
+        <div class="nav-go-live">
+            <aside>
+                <nav>
+                    <!-- <form action=""> -->
+                    <ul class="side-nav">
+
+                        <li id="match"> <a href="match.html">Upcoming Match</a></li>
 
                         <li> <a href="group.html">All Group</a></li>
 
                         <li> <a href="blog.html">Blog</a></li>
-                    </form>
-                </ul>
-            </nav>
-        </aside>
 
-        <!-- Go live section -->
-        <div>
+                    </ul>
+                    <!-- </form> -->
+                </nav>
+            </aside>
+
+            <!-- Go live section -->
             <div class="go-live">
-                <h1>live 6 window needed</h1>
+                <div>
+                    <h1>live 6 window needed</h1>
+                </div>
             </div>
         </div>
 
