first-page-rough

--- a/index.html
+++ b/index.html
@@ -70,10 +70,119 @@
 
             <!-- Go live section -->
             <div class="go-live">
-                <div>
-                    <h1>live 6 window needed</h1>
+
+                <!-- no.1 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
                 </div>
+
+                <!-- no.2 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+
+                </div>
+
+                <!-- no.3 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.4 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.5 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.6 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
             </div>
+
+            <!-- --------go-live ending--------------- -->
         </div>
 
     </section>
