--- a/match.html
+++ b/match.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- stylesheet linking -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- nav css linking -->
     <link rel="stylesheet" href="styles/nav.css">
     <!-- font awesome icon -->
     <script src="https://kit.fontawesome.com/56fe0e4592.js" crossorigin="anonymous"></script>
 
-    <title>Qatar World Cup 2022</title>
+    <title>Goal</title>
 </head>
 
 <body>
@@ -27,9 +29,7 @@
                         <h1 class="heading-style">FIFA World Cup <span class="hosting-country">QATAR</span> 2022</h1>
                         <p class="para-style">The official home for world's most prestigious events</p>
 
-                        <!-- <button type="submit" class="btn btn-success">
-                            <i class="fa fa-arrow-circle-right fa-lg"></i> Next
-                        </button> -->
+
                         <form action="">
                             <button type="submit" class="banner-button"><i class="fa-solid fa-arrow-right"></i> Watch
                                 Live</button>
@@ -45,26 +45,74 @@
 
         </header>
     </section>
+
     <!---------- details of game ------------------->
-    <section>
 
-        <aside>
-            <nav>
-                <ul>
-                    <li> <a href=""></a>Upcoming Match</li>
-                    <li> <a href=""></a>All Group</li>
-                    <li><a href=""></a>Blog</li>
-                </ul>
-            </nav>
-        </aside>
+    <!-- aside navigation and go-live section -->
+    <section class="second-base-bg">
+
+        <div class="nav-go-live">
+            <aside>
+                <nav>
+                    <!-- <form action=""> -->
+                    <ul class="side-nav">
+
+                        <li id="match"> <a href="match.html">Upcoming Match</a></li>
+
+                        <li> <a href="group.html">All Group</a></li>
+
+                        <li> <a href="blog.html">Blog</a></li>
+
+                    </ul>
+                    <!-- </form> -->
+                </nav>
+            </aside>
 
 
 
-
+            <!-- --------go-live ending--------------- -->
+        </div>
 
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
-<!---------------- footer,contact,settings ------------------>
-<footer></footer>
+
+
+
+
+<!-- ----------  footer,contacts,privacy settings, socialmedia --------------------------------------------------------------- -->
+<footer>
+    <div class="footer-style">
+        <h1 class="goal">Goal</h1>
+
+        <hr>
+
+        <div class="social-media">
+            Follow Us: Facebook Tweeter Youtube
+        </div>
+
+        <div class="contact-misc">
+            <p>Contact Us</p>
+            <p>Terms of Service</p>
+            <p>Privacy Policy</p>
+            <p>Privacy Settings</p>
+            <p>Goal App</p>
+            <p>Goal Live</p>
+        </div>
+
+    </div>
+
+</footer>
 
 </html>
