--- a/index.html
+++ b/index.html
@@ -211,7 +211,12 @@
         <hr>
 
         <div class="social-media">
-            Follow Us: Facebook Tweeter Youtube
+            <span> Follow Us:</span>
+            <p><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            </p>
+            <p><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></p>
+            <p><a href="https://www.qatar2022.qa/en/home"><i class="fa-solid fa-futbol"></i></a></p>
+            <p><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
         </div>
 
         <div class="contact-misc">
