--- a/match.html
+++ b/match.html
@@ -68,9 +68,131 @@
                 </nav>
             </aside>
 
+            <!---------- Watch-match-live -------------->
+            <div class="watch-match">
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
 
 
-            <!-- --------go-live ending--------------- -->
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+                <div class="watch-match-container">
+                    <div class="match-banner">
+                        <img src="images/Flag.png" alt="">
+                        <p class="vs-style">vs</p>
+                        <img src="images/germany Flag.png" alt="">
+                    </div>
+                    <div class="game-time">
+                        <p>France vs Germany</p>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <!-- --------Watch-match-live-ending--------------- ------------------------------------>
         </div>
 
     </section>
@@ -99,7 +221,12 @@
         <hr>
 
         <div class="social-media">
-            Follow Us: Facebook Tweeter Youtube
+            <span> Follow Us:</span>
+            <p><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            </p>
+            <p><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></p>
+            <p><a href="https://www.qatar2022.qa/en/home"><i class="fa-solid fa-futbol"></i></a></p>
+            <p><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
         </div>
 
         <div class="contact-misc">
