--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                     <!-- <form action=""> -->
                     <ul class="side-nav">
 
-                        <li id="match"> <a href="match.html">Upcoming Match</a></li>
+                        <li> <a href="match.html">Upcoming Match</a></li>
 
                         <li> <a href="group.html">All Group</a></li>
 
-                        <li> <a href="blog.html">Blog</a></li>
+                        <li id="blog"> <a href="blog.html">Blog</a></li>
 
                     </ul>
                     <!-- </form> -->
@@ -205,29 +205,31 @@
 
 <!-- ----------  footer,contacts,privacy settings, socialmedia --------------------------------------------------------------- -->
 <footer>
-    <div class="footer-style">
-        <h1 class="goal">Goal</h1>
+    <div class="responsive-footer">
+        <div class="footer-style">
+            <h1 class="goal">Goal</h1>
 
-        <hr>
+            <hr>
 
-        <div class="social-media">
-            <span> Follow Us:</span>
-            <p><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
-            </p>
-            <p><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></p>
-            <p><a href="https://www.qatar2022.qa/en/home"><i class="fa-solid fa-futbol"></i></a></p>
-            <p><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
+            <div class="social-media">
+                <span> Follow Us:</span>
+                <p><a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+                </p>
+                <p><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></p>
+                <p><a href="https://www.qatar2022.qa/en/home"><i class="fa-solid fa-futbol"></i></a></p>
+                <p><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
+            </div>
+
+            <div class="contact-misc">
+                <p>Contact Us</p>
+                <p>Terms of Service</p>
+                <p>Privacy Policy</p>
+                <p>Privacy Settings</p>
+                <p>Goal App</p>
+                <p>Goal Live</p>
+            </div>
+
         </div>
-
-        <div class="contact-misc">
-            <p>Contact Us</p>
-            <p>Terms of Service</p>
-            <p>Privacy Policy</p>
-            <p>Privacy Settings</p>
-            <p>Goal App</p>
-            <p>Goal Live</p>
-        </div>
-
     </div>
 
 </footer>
