button-tablet-only

--- a/index.html
+++ b/index.html
@@ -190,8 +190,11 @@
 
 
 
-
-
+    <div class="Flex-button">
+        <form class="Only-tablet">
+            <button type="submit">View All</button>
+        </form>
+    </div>
 
 
 
@@ -231,6 +234,9 @@
 
         </div>
     </div>
+
+
+
 
 </footer>
 
