--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,144 @@
 
 <body>
     <h1> Welcome to the Fifa world cup 2022 blogs</h1>
+
+
+    <!---------- details of game ------------------->
+
+    <!-- aside navigation and go-live section -->
+    <section class="second-base-bg">
+
+        <div class="nav-go-live">
+            <aside>
+                <nav>
+                    <!-- <form action=""> -->
+                    <ul class="side-nav">
+
+                        <li> <a href="match.html">Upcoming Match</a></li>
+
+                        <li> <a href="group.html">All Group</a></li>
+
+                        <li id="blog"> <a href="blog.html">Blog</a></li>
+
+                    </ul>
+                    <!-- </form> -->
+                </nav>
+            </aside>
+
+            <!-- Go live section -->
+            <div class="go-live">
+
+                <!-- no.1 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.2 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+
+                </div>
+
+                <!-- no.3 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.4 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.5 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+                <!-- no.6 contaier -->
+                <div class="go-live-container">
+
+                    <div class="go-live-banner"> <img src="images/Blog Image.png" alt=""></div>
+
+                    <div class="go-button"><input type="submit" value="Transfer"></div>
+
+                    <p>Transfer Live: Chelsea in talks <br> over Kimpenbe transfer</p>
+
+                    <div class="live-info">
+                        <div> <i class="fa-solid fa-clock"></i> 10h
+                        </div>
+
+                        <div><i class="fa-solid fa-comment-dots"></i> 23</div>
+                    </div>
+
+                </div>
+
+            </div>
+
 </body>
 
 </html>
