--- a/match.html
+++ b/match.html
@@ -57,11 +57,11 @@
                     <!-- <form action=""> -->
                     <ul class="side-nav">
 
-                        <li> <a href="match.html">Upcoming Match</a></li>
+                        <li id="match"> <a href="match.html">Upcoming Match</a></li>
 
                         <li> <a href="group.html">All Group</a></li>
 
-                        <li id="blog"> <a href="blog.html">Blog</a></li>
+                        <li> <a href="blog.html">Blog</a></li>
 
                     </ul>
                     <!-- </form> -->
